; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libvmmapi/extr_vmmapi.c_vm_get_stat_desc.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libvmmapi/extr_vmmapi.c_vm_get_stat_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_stat_desc = type { i32, i8* }
%struct.vmctx = type { i32 }

@vm_get_stat_desc.statdesc = internal global %struct.vm_stat_desc zeroinitializer, align 8
@VM_STAT_DESC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vm_get_stat_desc(%struct.vmctx* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.vmctx*, align 8
  %5 = alloca i32, align 4
  store %struct.vmctx* %0, %struct.vmctx** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.vm_stat_desc, %struct.vm_stat_desc* @vm_get_stat_desc.statdesc, i32 0, i32 0), align 8
  %7 = load %struct.vmctx*, %struct.vmctx** %4, align 8
  %8 = getelementptr inbounds %struct.vmctx, %struct.vmctx* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @VM_STAT_DESC, align 4
  %11 = call i64 @ioctl(i32 %9, i32 %10, %struct.vm_stat_desc* @vm_get_stat_desc.statdesc)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i8*, i8** getelementptr inbounds (%struct.vm_stat_desc, %struct.vm_stat_desc* @vm_get_stat_desc.statdesc, i32 0, i32 1), align 8
  store i8* %14, i8** %3, align 8
  br label %16

15:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %16

16:                                               ; preds = %15, %13
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

declare dso_local i64 @ioctl(i32, i32, %struct.vm_stat_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
